# whiskers-launcher-bookmarks-extension

./: Cargo.toml  README.md  manifest.json  manifest.yml
src/: main.rs
src/actions/: mod.rs
src/bookmarks/: mod.rs
src/commands/: mod.rs
src/groups/: mod.rs
src/icons/: mod.rs
src/paths/: mod.rs
src/resources/: mod.rs
src/results/: mod.rs
src/settings/: functions.rs  mod.rs
