[package]
name = "com-lighttigerxiv-bookmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
whiskers-launcher-rs = { git = "https://github.com/Whiskers-Apps/whiskers-launcher-rs" }
#whiskers-launcher-rs = { path = "/home/lighttigerxiv/Projects/Cli/whiskers-launcher-rs" }
#whiskers-launcher-rs ={ path = "C:\\Users\\lighttigerxiv\\Projects\\WhiskersApps\\whiskers-launcher-rs" }
serde = "1.0.181"
serde_json = "1.0.113"
open = "5.0.0"
dirs = "5.0.1"
tokio = { version = "1.32.0", features = ["full"] }
bincode = "1.3.3"
reqwest = "0.12.4"
image = "0.25.1"
