
[package]
name = "com-lighttigerxiv-bookmarks"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = "1.0.213"
serde_json = "1.0.132"
open = "5.0.0"
dirs = "5.0.1"
tokio = { version = "1.41.0", features = ["full"] }
bincode = "1.3.3"
reqwest = "0.12.4"
image = "0.25.4"
sniffer-rs = "1.1.1"
whiskers-launcher-core = "0.3.0"